# booklogr

./: .bumpversion.toml  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_GUIDE.md  SECURITY.md  api-backend-x86_64-unknown-linux-gnu.spec  crowdin.yml  docker-compose.postgres.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml  release.yml
.github/workflows/: build-docker-image worker.yml  build-docker-image-web.yml  build-docker-image.yml  deploy-docs.yml  sponsors.yml
api/: README.md  app.py  book_provider.py  book_template_export.html  config.py  decorators.py  extensions.py  isbn.py  models.py  utils.py  wsgi.py
api/auth/: auth_route.py  decorators.py  models.py  user_route.py
api/commands/: tasks.py  user.py
api/routes/: books.py  fields.py  files.py  notes.py  profiles.py  settings.py  tasks.py
demo/: .env.api.example  .env.web.example  README.md  docker-compose.yml
demo/patches/: change_login_text.patch
docs/: apispec_1.yaml  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: Getting started.md
docs/docs/02 - Install/: Docker.md  How to update.md
docs/docs/03 - Configuration/: Check-for-updates.md  Data-providers.md  (+6 more)
migrations/versions/: 0246901434a1_add_fields_table.py  334c6f93b980_add_rating_column.py  37f4bd40ba32_add_subtitle_column_to_books_table.py  4f342e92ab1f_add_profiles_table.py  5c9e5e91be8f_add_notes_table.py  82989182da4a_add_files_table.py  85ac23ba45cb_add_profile_picture_column_to_profile_.py  89b6827408dd_add_user_settings_table.py  8f8a46fec66b_add_auth_tables.py  9232f4adc495_add_tasks_table.py  a1a14989ad81_add_created_on_column_to_books_table.py  ae48d4b4f9d8_add_owner_id_column.py  ba65325e5c32_add_reading_sessions_table.py  c21a781c1523_add_profile_picture_to_user_table.py  c9e06189519a_add_quote_page_column_to_notes_table.py  ce3cee57bdd9_initial_migration.py  e60887c12d97_add_author_column.py
tests/: test_isbn.py
utils/: README.md  compare-locale.sh
web/: .dockerignore  .env.example  .env.production  Dockerfile  index.html  inject-env.sh  nginx-custom.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
web/src/: AnimatedLayout.jsx  App.jsx  DateFormat.jsx  GlobalRouter.jsx  i18n.jsx  index.css  main.jsx  useInterval.jsx  useLibraryReducer.jsx  useProfilePicture.jsx
web/src-tauri/: Cargo.toml  tauri.conf.json
workers/: .env.example  Dockerfile  README.md  manage.py  pyproject.toml
workers/src/: example_worker.py  export_csv.py  export_html.py  export_json.py  post_mastodon.py
workers/src/html_templates/: all_books.html
(+142 files in other folders)
