[tool.poetry]
name = "booklogr-api"
version = "1.0.0"
description = "API for Booklogr"
authors = ["Andreas Backström <mozzo242@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
python-dotenv = "1.0.1"
Flask-JWT-Extended = "4.6.0"
flask-cors = "5.0.0"
psycopg2 = "2.9.9"
flask-marshmallow = "1.2.1"
flask-sqlalchemy = "3.1.1"
marshmallow-sqlalchemy = "1.1.0"
Flask-Migrate = "4.0.7"
gunicorn = "23.0.0"
flasgger = "0.9.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"