[tool.poetry]
name = "booklogr-api"
version = "1.4.1"
description = "API for Booklogr"
authors = ["Andreas Backström <mozzo242@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.1"
python-dotenv = "1.1.0"
Flask-JWT-Extended = "4.7.1"
flask-cors = "6.0.1"
psycopg2 = "2.9.10"
flask-marshmallow = "1.3.0"
flask-sqlalchemy = "3.1.1"
marshmallow-sqlalchemy = "1.4.2"
Flask-Migrate = "4.1.0"
gunicorn = "23.0.0"
flasgger = "0.9.7.1"
requests = "2.32.4"
mastodon-py = "2.0.1"
marshmallow = "4.0.0"
flask-mail = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"