[tool.poetry]
name = "booklogr-api"
version = "1.8.0"
description = "API for Booklogr"
authors = ["Andreas Backström <mozzo242@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.3"
python-dotenv = "1.2.2"
Flask-JWT-Extended = "4.7.1"
flask-cors = "6.0.2"
psycopg2 = "2.9.11"
flask-marshmallow = "1.4.0"
flask-sqlalchemy = "3.1.1"
marshmallow-sqlalchemy = "1.5.0"
Flask-Migrate = "4.1.0"
gunicorn = "25.3.0"
flasgger = "0.9.7.1"
requests = "2.33.1"
mastodon-py = "2.1.4"
marshmallow = "4.2.4"
flask-mail = "0.10.0"
flask-caching = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"