[tool.poetry]
name = "workers"
version = "0.1.0"
description = ""
authors = ["Andreas Backström <mozzo242@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
